@@ -747,6 +747,7 @@ void mqtt3_db_sys_update(mosquitto_db *db, int interval, time_t start_time)
 {
 	static time_t last_update = 0;
 	time_t now = time(NULL);
+	time_t uptime;
 	char buf[100];
 	int value;
 	int inactive;
@@ -763,11 +764,16 @@ void mqtt3_db_sys_update(mosquitto_db *db, int interval, time_t start_time)
 #endif
 	static unsigned long msgs_received = -1;
 	static unsigned long msgs_sent = -1;
+	static unsigned int msgsps_received = -1;
+	static unsigned int msgsps_sent = -1;
 	static unsigned long long bytes_received = -1;
 	static unsigned long long bytes_sent = -1;
+	static unsigned int bytesps_received = -1;
+	static unsigned int bytesps_sent = -1;
 
 	if(interval && now - interval > last_update){
-		snprintf(buf, 100, "%d seconds", (int)(now - start_time));
+		uptime = now - start_time;
+		snprintf(buf, 100, "%d seconds", (int)uptime);
 		mqtt3_db_messages_easy_queue(db, NULL, "$SYS/broker/uptime", 2, strlen(buf), (uint8_t *)buf, 1);
 
 		if(db->msg_store_count != msg_store_count){
@@ -837,6 +843,36 @@ void mqtt3_db_sys_update(mosquitto_db *db, int interval, time_t start_time)
 			mqtt3_db_messages_easy_queue(db, NULL, "$SYS/broker/bytes/sent", 2, strlen(buf), (uint8_t *)buf, 1);
 		}
 		
+		if(uptime){
+			value = msgs_received/uptime;
+			if(msgsps_received != value){
+				msgsps_received = value;
+				snprintf(buf, 100, "%u", msgsps_received);
+				mqtt3_db_messages_easy_queue(db, NULL, "$SYS/broker/messages/per second/received", 2, strlen(buf), (uint8_t *)buf, 1);
+			}
+
+			value = msgs_sent/uptime;
+			if(msgsps_sent != value){
+				msgsps_sent = value;
+				snprintf(buf, 100, "%u", msgsps_sent);
+				mqtt3_db_messages_easy_queue(db, NULL, "$SYS/broker/messages/per second/sent", 2, strlen(buf), (uint8_t *)buf, 1);
+			}
+
+			value = bytes_received/uptime;
+			if(bytesps_received != value){
+				bytesps_received = value;
+				snprintf(buf, 100, "%u", bytesps_received);
+				mqtt3_db_messages_easy_queue(db, NULL, "$SYS/broker/bytes/per second/received", 2, strlen(buf), (uint8_t *)buf, 1);
+			}
+
+			value = bytes_sent/uptime;
+			if(bytesps_sent != value){
+				bytesps_sent = value;
+				snprintf(buf, 100, "%u", bytesps_sent);
+				mqtt3_db_messages_easy_queue(db, NULL, "$SYS/broker/bytes/per second/sent", 2, strlen(buf), (uint8_t *)buf, 1);
+			}
+		}
+
 		last_update = time(NULL);
 	}
 }
